--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
 <alert type ="info">Hello Bootstrap</alert>
 <app-course-list></app-course-list>
 
-<h2>Here are some links to help you start: </h2>
+<h2>Here are some links to help you start Sanduniiii: </h2>
 <ul>
   <li>
     <h2><a target="_blank" rel="noopener" href="https://angular.io/tutorial">Tour of Heroes</a></h2>
